# app/controllers/role_controller.go
@@ -40,7 +40,7 @@ func (r *RoleController) GetRoleById(ctx *gin.Context) {
 	result := r.service.GetRoleById(uriId)
 
 	if result == nil {
-		response := tools.CreateSuccessResponseWithData(result)
+		response := tools.CreateNotFoundResponse()
 		ctx.JSON(http.StatusNotFound, response)
 		return
 	}
@@ -70,7 +70,7 @@ func (r *RoleController) GetRoleByName(ctx *gin.Context) {
 	result := r.service.GetRoleByName(uriName)
 
 	if result == nil {
-		response := tools.CreateSuccessResponseWithData(result)
+		response := tools.CreateNotFoundResponse()
 		ctx.JSON(http.StatusNotFound, response)
 		return
 	}
@@ -109,11 +109,101 @@ func (r *RoleController) GetRoles(ctx *gin.Context) {
 	result := r.service.GetRoles(param)
 
 	if result == nil {
-		response := tools.CreateSuccessResponseWithData(result)
+		response := tools.CreateNotFoundResponse()
 		ctx.JSON(http.StatusNotFound, response)
 		return
 	}
 
 	response := tools.CreateSuccessResponseWithData(result)
+	ctx.JSON(http.StatusOK, response)
+}
+
+// PostRole godoc
+//
+//	@Summary		Create Role Data
+//	@Description	Create Role Data
+//	@Tags			Role
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Param			request	body	dtos.CreateUpdateRoleRequest	true	"Body"
+//	@Router			/role [post]
+func (r *RoleController) PostRole(ctx *gin.Context) {
+	param := dtos.CreateUpdateRoleRequest{}
+
+	if err := ctx.ShouldBindJSON(&param); err != nil {
+		errMsg := tools.GenerateErrorMessageV2(err)
+		tools.ThrowExceptionOnValidation(http.StatusBadRequest, errMsg)
+	}
+
+	result := r.service.CreateRole(param)
+
+	response := tools.CreateSuccessResponseWithData(result)
+	ctx.JSON(http.StatusOK, response)
+}
+
+// PutRole godoc
+//
+//	@Summary		Update Role Data
+//	@Description	Update Role Data
+//	@Tags			Role
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Param			id		path	string							true	"Parameters"
+//	@Param			request	body	dtos.CreateUpdateRoleRequest	true	"Role"
+//	@Router			/role/{id} [put]
+func (r *RoleController) PutRole(ctx *gin.Context) {
+	roleId := dtos.UriUuid{}
+	if err := ctx.ShouldBindUri(&roleId); err != nil {
+		errMsg := tools.GenerateErrorMessageV2(err)
+		tools.ThrowExceptionOnValidation(http.StatusBadRequest, errMsg)
+	}
+
+	role := dtos.CreateUpdateRoleRequest{}
+	if err := ctx.ShouldBindJSON(&role); err != nil {
+		errMsg := tools.GenerateErrorMessageV2(err)
+		tools.ThrowExceptionOnValidation(http.StatusBadRequest, errMsg)
+	}
+
+	result := r.service.PutRole(roleId, role)
+
+	if result == nil {
+		resp := tools.CreateNotFoundResponse()
+		ctx.JSON(http.StatusNotFound, resp)
+		return
+	}
+
+	response := tools.CreateSuccessResponseWithData(result)
+	ctx.JSON(http.StatusOK, response)
+}
+
+// DeleteRole godoc
+//
+//	@Summary		Delete Role Data
+//	@Description	Delete Role Data
+//	@Tags			Role
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Param			id	path	string	true	"id"
+//	@Router			/role/{id} [delete]
+func (r *RoleController) DeleteRole(ctx *gin.Context) {
+	param := dtos.UriUuid{}
+
+	if err := ctx.ShouldBindUri(&param); err != nil {
+		errMsg := tools.GenerateErrorMessageV2(err)
+		tools.ThrowExceptionOnValidation(http.StatusBadRequest, errMsg)
+	}
+
+	result := r.service.DeleteRole(param)
+
+	if result == nil {
+		resp := tools.CreateNotFoundResponse()
+		ctx.JSON(http.StatusNotFound, resp)
+		return
+	}
+
+	response := tools.CreateSuccessDeletedResponseWithData(result)
 	ctx.JSON(http.StatusOK, response)
 }
